[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "floodstack"
version = "0.1.0a0"
description = "The open-source flood risk quantification pipeline"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Glenn Heistand", email = "gheistand@baseflood.com" }
]
keywords = ["flood", "risk", "hydrology", "hydraulics", "hec-ras", "hazus", "triton", "sphere"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy>=1.24",
    "geopandas>=0.14",
    "rasterio>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black",
    "ruff",
]
sphere = [
    "duckdb>=0.10",
    "pyarrow>=14",
]

[project.urls]
Homepage = "https://github.com/Reep-Works/floodstack"
Repository = "https://github.com/Reep-Works/floodstack"
"Reep Works" = "https://reepworks.com"

[tool.ruff]
line-length = 100
target-version = "py310"
